@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<metadata>
+    <version>1000</version>
+    <dependencies>
+    </dependencies>
+</metadata>
